# gar

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  deny.toml
.github/workflows/: ci.yml  fuzz.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-refactor-foundations/: 01-01-SUMMARY.md  01-02-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PATTERNS.md  01-REVIEW-FIX.md  01-REVIEW.md  01-VERIFICATION.md  01-dedupe-be-u64-PLAN.md  02-lens-mode-dispatch-table-PLAN.md
.planning/phases/02-env-test-serialisation/: 02-01-workspace-prep-PLAN.md  02-01-workspace-prep-SUMMARY.md  02-02-serial-env-annotations-PLAN.md  02-02-serial-env-annotations-SUMMARY.md  02-03-env-discipline-gate-PLAN.md  02-03-env-discipline-gate-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-REVIEW.md  02-VERIFICATION.md
.planning/phases/03-roundtrip-matrix-fixture-integration/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-PATTERNS.md  03-RESEARCH.md  03-REVIEW.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-tighten-parse-run-close-coverage-gaps/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-PATTERNS.md  04-RESEARCH.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-fuzz-criterion-harnesses/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-CONTEXT.md  05-DISCUSSION-LOG.md  05-PATTERNS.md  05-RESEARCH.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
crates/base60-cli/: Cargo.toml
crates/base60-cli/benches/: README.md  decode.rs  dump.rs  search.rs
crates/base60-cli/src/: analyze.rs  chunk.rs  cli.rs  color.rs  decode.rs  dump.rs  format.rs  lib.rs  main.rs  persist.rs  search.rs  tui.rs
crates/base60-cli/tests/: cli.rs  fixtures.rs  persist.rs  reader.rs  roundtrip.rs  tui.rs
crates/base60-cli/tests/common/: mod.rs
crates/base60-core/: Cargo.toml
crates/base60-core/benches/: README.md  convert.rs  lens.rs
crates/base60-core/src/: convert.rs  cuneiform.rs  lens.rs  lib.rs  url.rs
crates/gar-cli/: Cargo.toml
crates/gar-cli/benches/: README.md  decode.rs  dump.rs  search.rs
crates/gar-cli/src/: analyze.rs  chunk.rs  cli.rs  color.rs  decode.rs  dump.rs  format.rs  lib.rs  main.rs  persist.rs  reader.rs  search.rs  tui.rs
crates/gar-cli/tests/: cli.rs  fixtures.rs  persist.rs  reader.rs  roundtrip.rs  tui.rs
crates/gar-cli/tests/common/: mod.rs
crates/gar-core/: Cargo.toml
crates/gar-core/benches/: README.md  convert.rs  lens.rs
crates/gar-core/src/: cuneiform.rs  lens.rs  lib.rs  url.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: lib.rs
crates/xtask/tests/: env_discipline.rs  spawn_discipline.rs
docs/plans/: 2026-04-23-sumerian-roadmap.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: decode_stream.rs  parse_run.rs  pattern_from_str.rs
scripts/: smoke-serial.sh
src/: analyze.rs  cli.rs  color.rs  convert.rs  cuneiform.rs  decode.rs  dump.rs  format.rs  lens.rs  main.rs  persist.rs  reader.rs  tui.rs
