[workspace]
resolver = "3"
members = ["crates/base60-core", "crates/base60-cli", "crates/xtask"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
repository = "https://github.com/retengart/test-60"
publish = false

# One profile for the whole workspace so `cargo install` of either
# crate produces a stripped, LTO'd binary.
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
missing_debug_implementations = "warn"
unreachable_pub = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Transitive dependency graph is fixed by upstream; warning is not actionable.
multiple_crate_versions = "allow"
# Intentional: module-per-concern layout is clearer than a monolithic file.
module_name_repetitions = "allow"
