[package]
name = "gar"
description = "View binary data as Sumero-Babylonian base-60 digit pairs."
keywords = ["hexdump", "sexagesimal", "gar", "binary", "viewer"]
categories = ["command-line-utilities", "visualization"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
readme.workspace = true

[lib]
name = "gar"
path = "src/lib.rs"

[[bin]]
name = "gar"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.1"
crossterm = "0.29.0"
memchr = "2.8"
memmap2 = "0.9.10"
ratatui = "0.30.0"
gar-core = { version = "0.1.0", path = "../gar-core" }

[dev-dependencies]
assert_cmd = "2"
gar-core = { version = "0.1.0", path = "../gar-core" }
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support", "html_reports"] }
predicates = "3"
serial_test = { version = "3", default-features = false }
tempfile = "3"

[[bench]]
name    = "dump"
harness = false

[[bench]]
name    = "decode"
harness = false

[[bench]]
name    = "search"
harness = false

[lints]
workspace = true
