[package]
name = "gar-core"
description = "Base-60 conversion, Sumero-Babylonian lenses, and URL-safe encoding primitives."
keywords = ["sexagesimal", "gar", "cuneiform", "encoding"]
categories = ["encoding", "no-std"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
readme.workspace = true

[dev-dependencies]
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support", "html_reports"] }
serial_test = { version = "3", default-features = false }

[[bench]]
name    = "convert"
harness = false

[[bench]]
name    = "lens"
harness = false

[lints]
workspace = true
