[package]
name = "xtask"
description = "Workspace-level automation tasks (test gates, lints, housekeeping)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dev-dependencies]
walkdir = "2"

[lints]
workspace = true
